fix (css): Bump up z-index for input-area
BPM overview delimiters would overflow input-area windows due to having
a higher z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -848,7 +848,7 @@ label.checkbox .checkmark:after {
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
   display: none;
 }
 .action-input-area .background {
